v2:fix h-auto, routing to reel, video-container position

--- a/src/index.less
+++ b/src/index.less
@@ -20,16 +20,16 @@ code {
   position: relative;
   width: 100%;
   height: 100%;
-  top: 26em;
+  bottom: 0;
 }
 
 .video-container video {
   position: absolute;
   z-index: 1;
-  top: 10%;
+  top: 0%;
   left: 50%;
-  max-height: 86vh;
-  transform: translate(-50%, -51%);
+  max-height: 88vh;
+  transform: translate(-50%, 13%);
 }
 
 @media screen and (max-width: 480px) {
